--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=
 
 # Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=h2
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.show-sql=true
